# StreamingFilter

./: .gitignore
project1/: CMakeLists.txt  DA2Network.hpp  da2-video.cpp  faceDetect.h  filter.cpp  filter.h  imgDisplay.cpp  readme.md  timeBlur.cpp  vidDisplay.cpp
project2/: CMakeLists.txt  DA2Network.hpp  extractFeature.cpp  extractFeature.h  findSimilarImages.cpp  matchDistance.cpp  matchDistance.h  processImages.cpp  processImages.h  readme.md
project3/: CMakeLists.txt  da2-example.cpp  da2-video.cpp  imgDisplay.cpp  object_db-scaled.csv  object_db_cosine_filled.csv  object_db_linf_filled.csv  or.cpp  or.h  readme.md  vidDisplay.cpp
project4/: CMakeLists.txt  cameraPose.cpp  featureDetection.cpp  readme.md  sand_texture.jfif  vidDisplay.cpp
project5/: customized_digits.py  digits_model.py  greek_model.py  mode_eval.py  model_exam.py  model_train.py  new_digits.py  readme.md
project5/model/: model.pth  optimizer.pth
